fixed filters: invisible first button now

--- a/static/css/events.css
+++ b/static/css/events.css
@@ -36,3 +36,11 @@ html {
 
 }
 
+.defaultsink {
+    width: 0px;
+    height: 0px;
+    margin: 0px;
+    padding: 0px;
+    outline: none;
+    border: 0px;
+}
